Repositioned login elements, Fixed overflowing images in searches

--- a/css/Login_Style.css
+++ b/css/Login_Style.css
@@ -37,7 +37,7 @@ header > div{
 	height: 150px;
 }
 
-span{
+.welcome{
 	color: white;
 	font-family: "Gotham Medium";
 	letter-spacing: 10px;
@@ -62,7 +62,6 @@ a{
 	padding: 10px;
 	border-radius: 5px;
 	transition: 0.4s;
-	border: 2px solid rgba(0,0,0,0);
 }
 
 a:hover,
@@ -71,8 +70,7 @@ input[type=submit]:hover{
 	/*font-family: "Gotham Medium";*/
 	color: white;
 	text-decoration: none;
-	background-color: #00ACC1;
-	border: 2px solid white;
+	background-color: #00E5FF;
 }
 
 form{
@@ -93,6 +91,10 @@ input[type=password]{
 	padding: 7px;
 }
 
+input[type=password]{
+	margin-bottom: 10px;
+}
+
 input[type=submit]{
 	display: block;
 	width: 125px;
@@ -102,11 +104,11 @@ input[type=submit]{
 	color: white;
 	background-color: #0097A7;
 	padding: 10px;
+	border: none;
 	border-radius: 5px;
-	margin: 20px auto 0 auto;
+	margin: 10px auto 0 auto;
 	transition: 0.4s;
 	box-sizing: border-box;
-	border: 2px solid rgba(0,0,0,0);
 }
 
 label{
@@ -130,12 +132,22 @@ input[type=checkbox] + label:before{
 	display: inline-block;
 	height: 15px;
 	width: 15px;
-	border: white solid 2px;
 	border-radius: 50%;
 	margin-left: -12px;
 	margin-right: 10px;
 	transform: translate(-2px, 2px);
 	z-index: -1;
+}
+
+.error{
+	background-color: #E91E63;
+	padding: 5px 10px;
+	display: block;
+	text-align: center;
+	width: 100%;
+	color: white;
+	font-size: 0.8em;
+	border-radius: 2px;
 }
 
 /*input[type=checkbox] + label:before{
